# neo6502-gameframework

./: .gitignore  .gitmodules  README.md
rp2040-firmware/: .gitignore  CMakeLists.txt  Makefile  platformio.ini
rp2040-firmware/build-scripts/kinc/: kfile-6502.js  kfile-modnative.js  kfile.js
rp2040-firmware/build-scripts/kinc/Deployment/: g1.frag  ng6502
rp2040-firmware/mod/: Makefile
rp2040-firmware/mod-flappy/: Makefile
rp2040-firmware/mod-flappy/export/: assets.c  assets.h
rp2040-firmware/mod-flappy/source/: flappy.c  flappy.h  mod_flappy.c
rp2040-firmware/mod-moorhuhn/: Makefile  readme.md
rp2040-firmware/mod-moorhuhn/assets/audio/mod/: game.mod
rp2040-firmware/mod-moorhuhn/export/: assets.c  assets.h
rp2040-firmware/mod-moorhuhn/source/: mh_globals.c  mh_globals.h  mod_init.c  moorhuhn.c  moorhuhn.h
rp2040-firmware/mod-template/: Makefile
rp2040-firmware/mod-template/export/: assets.c  assets.h
rp2040-firmware/mod-template/source/: link.ld  mod_init.c
rp2040-firmware/mod-tests/: Makefile
rp2040-firmware/mod-tests/export/: assets.c  assets.h
rp2040-firmware/mod-tests/source/: mod_init.c  test_pixelbuffer.c  tests.h
rp2040-firmware/mod/assets/tilemaps/: map.json
rp2040-firmware/mod/export/: assets.c  assets.h  color_palette.h  color_palette_small.h  font.h  old_guy.h  sprites_misc.h
rp2040-firmware/mod/source/: link.ld  main.c  mod.c  mod_paging.c  mod_pixelbuffer.c  mod_simple.c  mod_tilemap.c  mod_tilemape_sprite.c  mod_tm.c
rp2040-firmware/source/: CMakeLists.txt  main.c  ng_all.h  ng_assets.c  ng_assets.h  ng_audio.c  ng_audio.h  ng_cpu.c  ng_cpu.h  ng_defines.h  ng_gfx.c  ng_gfx.h  ng_gfx_pixelbuffer.c  ng_gfx_spritebuffer.c  ng_gfx_tilemap.c  ng_io.c  ng_io.h  ng_mem.c  ng_mem.h  ng_sound.c  ng_sound.h  ng_sound_tsf.c  ng_utils.c  ng_utils.h
rp2040-firmware/source/3rd/audio/: audio.c  audio.h
rp2040-firmware/source/3rd/modplay/: modplay.c
rp2040-firmware/source/api/: ng_api.h  ng_api_mapping.h  ng_api_shared.c  ng_api_shared.h  ng_config.h
rp2040-firmware/source/api/gen-templates/: templ_ng_api.c  templ_ng_api.h  templ_ng_mem_callfunction.c
rp2040-firmware/source/assets/: thats_cool.h  zelda_mini_plus_walk_rgab5515.h
rp2040-firmware/source/core/: memory.c  memory.cpp  memory.h  mos65C02.cpp  mos65C02.h  pins.h  roms.c  roms.cpp  roms.h  wdc65C02cpu.c  wdc65C02cpu.h
rp2040-firmware/source/core/backend/: ng_backend_audio.h
rp2040-firmware/source/core/backend/cpu/: wdc65C02cpu.c
rp2040-firmware/source/core/backend/kinc/: kinc_audio.c  kinc_cpu.c  kinc_cpu_6502emu.c  kinc_cpu_m6502.c  kinc_cpu_modnative.c  kinc_defines.h  kinc_gfx.c  kinc_io.c  kinc_ng.h  kinc_utils.c
rp2040-firmware/source/core/backend/neo6502/: neo6502.h  neo6502_audio.c  neo6502_cpu.c  neo6502_defines.h  neo6502_file.c  neo6502_gfx.c  neo6502_gfx.h  neo6502_io.c  neo6502_utils.c  tusb_config.h
rp2040-firmware/source/core/backend/neo6502/audio/: audio.c
rp2040-firmware/source/game/: game.c  game.h
rp2040-firmware/source/gen-templates/: templ_ng_api.c  templ_ng_api.h
rp2040-firmware/src/: aquarium.ino  audio.c  audio.cpp  audio.h  mod_data.h  mod_play.c  mod_play.h  modplayer.c  modplayer.h  thats_cool.h
rp2040-firmware/test/: 6502_func_call.c  6502_func_call_api.c  6502_loop.c  6502_loop.s  6502_tilepaint.c  6502_tilepaint.s  basic.lst  compile.sh  compile_func_call.sh  compile_func_call_api.sh  compile_my.sh  gen_prg1.c  gen_prg1.h  my.s
rp2040-firmware/testing/: CMakeLists.txt  test_6502.c
rp2040-firmware/tools/: create_palette.py  pal.h
rp2040-firmware/tools/cc65/: cc65-mem-kernel.cfg
rp2040-firmware/tools/generator/: generate_gluecode.json
rp2040-firmware/tools/generator/input/: glue.xml  glue_gfx.xml
rp2040-firmware/tools/ngtool/: gen.py  ng_config.py  ng_tool.py  ng_tool_create_gluecode.py  ng_tool_packfiles.py  ng_tool_palette.py  ng_tool_resolve_mapped_addresses.py  ng_tool_tilemap_converter.py  ng_tool_tilemap_formats.py  ng_tool_tilemap_spritefusion.py  ng_tool_tilesheet.py  utils.py
rp2040-firmware/tools/test/: palette.h  sprite_misc.h
